# dc_gnn

./: pyproject.toml
data/: graph.pt
src/: create_graph.ipynb
