[project]
name = "dc-gnn"
version = "0.1.0"
description = "Pipeline for the GNN for drug combinations"
readme = "README.md"
authors = [
    { name = "Joaquin Negrete", email = "joaquin.negrete03@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "torch==2.8.0",
    "torch-geometric>=2.7.0",
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu129" }
