[project]
name = "dc-gnn"
version = "0.1.0"
description = "Pipeline for the GNN for drug combinations"
readme = "README.md"
authors = [
    { name = "Joaquin Negrete", email = "joaquin.negrete03@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "nbdime>=4.0.4",
    "pandas>=3.0.1",
    "pymysql>=1.1.2",
    "rdkit>=2025.9.5",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.47",
    "torch==2.8.0",
    "torch-geometric>=2.7.0",
]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu129" }
